# telegram_bot

./: .gitignore  app.py  pyproject.toml
core/: config.py  logger.py
scripts/: check_alexa.py  dtek_monitor.py  electricity_status.py  telegram-webhook.py
services/: sensu_client.py
telegram/: bot.py  commands.py
